--- a/css/index.css
+++ b/css/index.css
@@ -1,66 +1,44 @@
-body{
+body {
+    /*min-height: 75rem;
+     padding-top: 4.5rem; */
     font-family: 'Montserrat', sans-serif;
-    background-color: #fff6e9;
+    /* background-color: #fff6e9; */
+    background-color: white;
     text-align: center;
-}
-
-h1{
-    font-size: 1.5rem;
-    font-weight: 700;
-    text-align: center;
-}
+  }
 
 h2{
-    font-size: 1rem;
+    font-size: 1.7rem;
     font-weight: 600;
-    text-align: center;
+    padding-bottom: 1rem;
+}
+.navbar-collapse{
+    justify-content: flex-end;
+    padding-right: 3rem;
 }
 
-header{
-    background-color: #053b6d;
-    padding: 0px 0;
-}
-
-.menu{
-    display: none;
-    width: 100%;
-    justify-content: space-evenly;
-    color: #fff6e9;
-
-}
-
-.logo{
-    width: 100%;
-}
-
-.menu-list{
-    width: 90%;
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.menu-item{
-    font-size: 1.3rem;
-    display: inline;
+.navbar-brand{
+    font-weight: bold;
+    color: rgb(6, 6, 121);
+    padding-right: 2rem;
 }
 
 .nosotros{
-    
     padding: 1rem 0 1rem 0;
 }
 
 .titulo{
     font-family: 'Raleway', sans-serif;
     font-style: italic;
-    font-weight: 600;
-    font-size: 1.5rem;
+    font-weight: 700;
+    font-size: 2rem;
     padding-bottom: 1rem;
 }
 
 .descripcion{
     font-size: 1.2rem;
     padding: .5rem;
-}
+}  
 
 .fotos{
     display: flex;
@@ -68,25 +46,36 @@ header{
 }
 
 .carousel-inner{
-    width: 40vw;
+    width: 33vw;
     border-radius: 1.5rem;
     box-shadow: 5px 5px 30px 10px #a099dd;
 }
 
-.servicios .titulo{
-    padding-top: 3rem;
+.servicios{
+    padding-top: 4rem;
 }
 
-.boda ul{
+.row{
+    justify-content: center;
+    padding-top: 2rem;
+}
+
+.card-header{
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: darkblue;
+}
+
+/* .card-img-top{
+
+} */
+
+.bi-check2-all{
+    color: #053b6d;
+    font-size: 1.2rem;
     text-align: left;
-    font-size: 1rem;
 }
 
-li{
-    list-style-type: circle;
-}
-
-/*Pagina contacto.html*/
 
 .contacto{
     width: 100%;
@@ -172,7 +161,7 @@ form legend{
 .copyright{
 height: 3rem;
 background-color: darkgrey;
-font-size: 1rem;
+font-size: 1.2rem;
 padding-top: 1rem;
 }
 
@@ -186,12 +175,13 @@ padding-top: 1rem;
     color:#FFF;
     border-radius:50px;
     text-align:center;
-    font-size:30px;
+    font-size:20px;
     z-index:100;
+    padding-top: 13px;
 }
 
 .whatsapp-icon {
-    margin-top:13px;
+    margin-top:10px;
 }
 
 /* Diseno responsivo*/
@@ -225,3 +215,53 @@ padding-top: 1rem;
         width: 33vw;    
     }
 }
+  /* .bd-placeholder-img {
+    font-size: 1.125rem;
+    text-anchor: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+  }
+
+  @media (min-width: 768px) {
+    .bd-placeholder-img-lg {
+      font-size: 3.5rem;
+    }
+  }
+
+  .b-example-divider {
+    height: 3rem;
+    background-color: rgba(0, 0, 0, .1);
+    border: solid rgba(0, 0, 0, .15);
+    border-width: 1px 0;
+    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+  }
+
+  .b-example-vr {
+    flex-shrink: 0;
+    width: 1.5rem;
+    height: 100vh;
+  }
+
+  .bi {
+    vertical-align: -.125em;
+    fill: currentColor;
+  }
+
+  .nav-scroller {
+    position: relative;
+    z-index: 2;
+    height: 2.75rem;
+    overflow-y: hidden;
+  }
+
+  .nav-scroller .nav {
+    display: flex;
+    flex-wrap: nowrap;
+    padding-bottom: 1rem;
+    margin-top: -1px;
+    overflow-x: auto;
+    text-align: center;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch; 
+  }*/
